# SteeringControl

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: ace.yaml  ace_conditional.yaml  ace_cosmic.yaml  ace_nokl.yaml  baseline.yaml  caa.yaml  caa_conditional.yaml  caa_cosmic.yaml  caa_nokl.yaml  dim.yaml  dim_conditional.yaml  dim_cosmic.yaml  dim_nokl.yaml  lat.yaml  lat_conditional.yaml  lat_nokl.yaml  pca.yaml  pca_conditional.yaml  pca_cosmic.yaml  pca_new_cosmic.yaml  pca_nokl.yaml
configs/concepts/: explicit_bias.yaml  hallucination_extrinsic.yaml  hallucination_intrinsic.yaml  implicit_bias.yaml  refusal_base.yaml
configs/models/: gemma2-2b.yaml  llama3-1-8b.yaml  qwen25-05b.yaml  qwen25-1-5b.yaml  qwen25-3b.yaml  qwen25-7b.yaml
configs/secondary_concepts/: anthropomorphization.yaml  brand_bias.yaml  commonsense.yaml  expert.yaml  leakage.yaml  math.yaml  misconceptions.yaml  morality.yaml  politics.yaml  sneaking.yaml  synchopancy.yaml  user_retention.yaml
data/: bias.py  create_data_splits.py  hallucination.py  refusal.py  secondary_datasets.py  steering_data.py
data/datasets/: faitheval_unanswerable_negative_answers.json  (+1 more)
direction_application/: __init__.py  base.py  conditional.py  unconditional.py
direction_generation/: __init__.py  base.py  linear.py
direction_selection/: __init__.py  base.py  cosmic.py  grid_search.py
utils/: __init__.py  call_openai.py  dark_patterns.py  enums.py  experiment_saver.py  experiment_utils.py  intervention_llm.py  intervention_utils.py  llm.py  steering_utils.py  supported_llms.py
(+17 files in other folders)
